--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -39,7 +39,7 @@
 						<li class="nav-item"><a class="nav-link" href="/about">About</a></li>
 						<li class="nav-item"><a class="nav-link" href="/contact">Contact</a>
 						</li>
-						<li class="nav-item"><a class="nav-link" href="/contact">FAQ</a>
+						<li class="nav-item"><a class="nav-link" href="/faq">FAQ</a>
 						</li>
 					</ul>
 				</div>
