--- a/src/faq.njk
+++ b/src/faq.njk
@@ -150,7 +150,7 @@
 				<div id="faqCollapseFive" class="accordion-collapse collapse"
 					aria-labelledby="faqHeadingFive" data-bs-parent="#faqAccordion">
 					<div class="accordion-body">
-						Pricing is tailored to your business’s needs and complexity. We offer
+						Pricing is tailored to your business needs and complexity. We offer
 						the following packages:
 						<ul>
 							<li><strong>Essential Services:</strong> $2,500/month for a
